# unpopularr

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  cog.toml  config.example.toml  package-lock.json  playwright.config.ts
.github/workflows/: release.yml
e2e/: artists-details.spec.ts  config.toml  mock-arr.mjs  movies-details.spec.ts  seed.ts  series-details.spec.ts  servers.sh
migrations/: 0001_initial.sql  0002_playback.sql  0003_playback_events.sql  0004_playback_legacy_snapshots.sql  0005_series_episode_snapshots.sql  0006_playback_event_positions.sql  0007_artist_album_details.sql  0008_movie_added_at.sql  0009_series_title_slug.sql  0010_movie_title_slug.sql  0011_playback_event_users.sql
src/: config.rs  database.rs  http.rs  lib.rs  main.rs  web_assets.rs
src/catalog/: application.rs  domain.rs  mod.rs  ports.rs
src/catalog/adapters/: sqlite.rs
src/collection/: application.rs  domain.rs  mod.rs  ports.rs
src/collection/adapters/: arr.rs  mod.rs  sqlite.rs
src/instances/: domain.rs  mod.rs
src/playback/: application.rs  domain.rs  mod.rs  ports.rs
src/playback/adapters/: mod.rs  sqlite.rs  tautulli.rs
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.tsx  index.css  main.tsx
web/src/activity/: ActivityView.tsx  InstanceResultRow.tsx  PlaybackSyncPanel.tsx  SyncPanel.tsx
web/src/api/: client.test.ts  client.ts  http.test.ts  http.ts  mutations.ts  queries.ts  queryKeys.ts  types.ts
web/src/artist/: ArtistDetailView.tsx
web/src/catalog/: CatalogStats.tsx  CatalogTable.tsx  CatalogToolbar.tsx  CatalogView.tsx  catalogSettings.test.ts  catalogSettings.ts  columns.tsx
web/src/components/: ArrLinkIcon.tsx  Button.tsx  DetailHeaderCard.tsx  EmptyState.tsx  Header.tsx  InstanceChips.tsx  InstanceTable.tsx  Skeletons.tsx  StatCard.tsx  StatusChip.tsx  SyncBadge.tsx  TypeBadge.tsx  UserPlaybackTable.tsx
web/src/lib/: content.test.ts  content.ts  deepLink.test.ts  deepLink.ts  filters.test.ts  filters.ts  format.test.ts  format.ts
web/src/movie/: MovieDetailView.tsx  MoviePlaybackChart.tsx  moviePlaybackChart.test.ts  moviePlaybackChart.ts
(+10 files in other folders)
